--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Fevicon Link Updated -->
+    <link rel="icon" type="image/png" href="/public/resume.png" /> 
+    
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>MY PORTFOLIO </title>
+    <title>MY PORTFOLIO</title>
   </head>
   <body>
     <div id="root"></div>
