add project nad profile componets and some images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="/public/resume.png" /> 
     
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>MY PORTFOLIO</title>
+    <title>RP SOLUTIONS</title>
   </head>
   <body>
     <div id="root"></div>
