--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Fevicon Link Updated -->
-    <link rel="icon" type="image/png" href="/public/resume.png" /> 
+    <link rel="icon" type="image/png" href="/public/fevicon.png" /> 
     
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>RP SOLUTIONS</title>
